--- a/aionbook_theme/css/course.css
+++ b/aionbook_theme/css/course.css
@@ -8,20 +8,22 @@
 
 .carousel {
     position: relative;
+    margin-top: 300px;
     width: 100%;
-    max-width: 1000px;
-    height: 400px;
+    max-width: 1200px;
+    height: 700px;
     overflow: hidden;
 }
 
 .carousel-inner {
     display: flex;
     transition: transform 0.5s ease;
+    transform: translateX(10px); /* 첫 화면에 7번, 1번, 2번 카드가 보이도록 조정 */
 }
 
 .card {
     flex: 0 0 300px;
-    height: 350px;
+    height: 400px;
     margin: 0 10px;
     background-color: white;
     border-radius: 10px;
@@ -30,48 +32,69 @@
     cursor: pointer;
     overflow: hidden;
     position: relative;
-}
-
-.card:hover {
-    transform: translateY(-10px);
+    display: flex;
+    flex-direction: column;
 }
 
 .card.active {
     flex: 0 0 350px;
-    height: 400px;
+    height: 450px;
 }
 
 .card-content {
-    padding: 20px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+
+.card-image {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .card h2 {
-    margin-top: 0;
-    color: #333;
+    padding: 10px;
+    margin-top: 15px;
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 700;
+    color: #242E64;
 }
 
 .card p {
-    color: #666;
+    margin-top: 10px;
+    padding: 10px;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 500;
+    color: #323232;
+    flex-grow: 1;
 }
 
 .card .button {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 14px;
     background-color: white;
     color: #6200ea;
     text-decoration: none;
     border-radius: 100px;
-    border-color: red;
-    transition: background-color 0.3s ease;
+    border: 1px solid gray;
+    transition: all 0.3s ease;
+    text-align: center;
+    margin-top: auto;
 }
 
 .card .button:hover {
-    background-color: #3700b3;
+    background-color: #6200ea;
     color: white;
-}
-
-.locked {
-    position: relative;
 }
 
 .locked::after {
@@ -104,6 +127,7 @@
     font-size: 24px;
     color: #333;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    z-index: 10;
 }
 
 .arrow-left {
