--- a/aionbook_theme/css/course.css
+++ b/aionbook_theme/css/course.css
@@ -8,23 +8,21 @@
 
 .carousel {
     position: relative;
-    margin-top: 300px;
     width: 100%;
     max-width: 1200px;
-    height: 700px;
+    height: 500px;
     overflow: hidden;
 }
 
 .carousel-inner {
     display: flex;
     transition: transform 0.5s ease;
-    transform: translateX(10px); /* 첫 화면에 7번, 1번, 2번 카드가 보이도록 조정 */
 }
 
 .card {
-    flex: 0 0 300px;
-    height: 400px;
-    margin: 0 10px;
+    flex: 0 0 360px;
+    height: 450px;
+    margin: 0 20px;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -36,13 +34,17 @@
     flex-direction: column;
 }
 
-.card.active {
-    flex: 0 0 350px;
-    height: 450px;
+.card:hover {
+    transform: scale(1.05);
 }
 
+/* .card.active {
+    flex: 0 0 350px;
+    height: 450px;
+} */
+
 .card-content {
-    padding: 0px;
+    /* padding: 20px; */
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -50,7 +52,7 @@
 
 .card-image {
     width: 100%;
-    height: 100%;
+    height: 304px;
     overflow: hidden;
 }
 
@@ -60,11 +62,11 @@
     object-fit: cover;
 }
 
+
 .card h2 {
-    padding: 10px;
     margin-top: 15px;
     font-size: 24px;
-    line-height: 36px;
+    line-height: 1.2;
     font-weight: 700;
     color: #242E64;
 }
@@ -73,7 +75,7 @@
     margin-top: 10px;
     padding: 10px;
     font-size: 18px;
-    line-height: 28px;
+    line-height: 24px;
     font-weight: 500;
     color: #323232;
     flex-grow: 1;
@@ -81,15 +83,16 @@
 
 .card .button {
     display: inline-block;
-    padding: 14px;
+    padding:  12px 20px;
     background-color: white;
     color: #6200ea;
     text-decoration: none;
     border-radius: 100px;
-    border: 1px solid gray;
+    border: 1px solid #D3D3D3;
     transition: all 0.3s ease;
     text-align: center;
     margin-top: auto;
+    font-weight: 600;
 }
 
 .card .button:hover {
@@ -128,12 +131,13 @@
     color: #333;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     z-index: 10;
+    transition: all 0.3s ease;
 }
 
 .arrow-left {
-    left: 10px;
+    left: 1px;
 }
 
 .arrow-right {
-    right: 10px;
+    right: 1px;
 }
