--- a/aionbook_theme/css/pages.css
+++ b/aionbook_theme/css/pages.css
@@ -138,7 +138,9 @@
     font-weight: 500;
     color: #323232;
   }
-  
+  /*  */
+  /* learning course 한 번에 끝내는 AI 학습코스 */
+  /*  */
   .learning-course__inner {
     width: 1200px;
     margin: 0 auto;
@@ -162,55 +164,73 @@
     line-height: 60px;
     font-weight: 700;
   }
-  .learning-course__list {
-    margin-top: 80px;
-    display: grid;
-    gap: 24px;
-    grid-template-columns: repeat(3, 1fr);
-  }
   .learning-course__item {
-    padding: 40px 24px;
+    padding: 0;
     background-color: #F8FCFF;
-    height: 420px;
+    width: 1202px;
+    height: 294px;
     border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
   }
+  
+  .learning-course__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+  }
+  
+  .learning-course__text {
+    padding: 40px 24px;
+    flex: 1;
+  }
+  
+  .learning-course__image {
+    width: 280px;
+    height: 279px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
   .learning-course__item img {
-    width: 100%;
-    margin-top: 24px;
+    width: 280px;
+    height: 279px;
+    object-fit: cover;
   }
-  .learning-course__text .learning-course__name {
+  
+  .learning-course__name {
     font-size: 20px;
     line-height: 26px;
     font-weight: 700;
     color: #000;
+    margin-bottom: 12px;
   }
-  .learning-course__text .learning-course__desc {
-    display: inline-block;
-    margin-top: 12px;
+  
+  .learning-course__desc {
+    display: block;
     font-size: 16px;
     line-height: 24px;
     font-weight: 500;
     color: #323232;
-    display: -webkit-box;
-    word-wrap: break-word;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    height: 48px;  
+    margin-bottom: 24px;
   }
+  
   .learning-course__btn {
-    margin-top: 24px;
     background-color: #fff;
-    border: 1px solid #DEDEDE;
+    border: 1px solid #4D46D5;
     padding: 7px 23px;
     border-radius: 6px;
     line-height: 24px;
     font-size: 16px;
     font-weight: 500;
   }
+  
   .learning-course__btn:hover {
     background-color: #F1F1F1;
   }
+  /*  */
   
   .banner {
     background: #0B0E24;
