--- a/aionbook_theme/css/pages.css
+++ b/aionbook_theme/css/pages.css
@@ -58,8 +58,9 @@
     font-size: 24px;
     font-weight: 500;
   }
+
   .main__button-wrap {
-    margin-top: 56px;
+    margin-top: 100px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -104,10 +105,11 @@
     font-weight: 700;
     color: #Fff;
   }
+  /* 체험하기 도입문의 버튼 */
   .banner__btn {
-    margin-top: 48px;
-    padding: 10px 82px;
-    border-radius: 6px;
+    margin-top: 200px;
+    padding: 100px 100px;
+    border-radius: 100%;
     line-height: 28px;
     font-size: 18px;
     font-weight: 600;
