--- a/aionbook_theme/css/coursegrid.css
+++ b/aionbook_theme/css/coursegrid.css
@@ -1,3 +1,6 @@
+/*  */
+/* 미래를 비추는 AI onBook */
+/*  */
 .course-grid {
     padding: 100px 100px;
     background-color: #f0f0f0;
@@ -15,8 +18,17 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
-    max-width: 1200px;
+    width: 1200px;
     margin: 0 auto;
+    padding: 0;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
   }
 
 .card {
