--- a/aionbook_theme/css/pages.css
+++ b/aionbook_theme/css/pages.css
@@ -26,11 +26,50 @@
   }
   
   .main {
-    background-color: #78CEFF;
+    background: url('../aionbook_theme/images/home/herobn.png') no-repeat center center;
+    background-size: cover;
+    height: 100vh; /* 페이지의 전체 높이 */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
+  
   .main__inner {
-    width: 1200px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
+
+  .main__button-wrap {
+    margin-top: 20px;
+    display: flex;
+    gap: 16px;
+    justify-content: center; /* 버튼을 가운데 정렬 */
+  }
+  
+  .hero-btn {
+    border: 2px solid #222;
+    padding: 8px 38px;
+    border-radius: 6px;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 28px;
+    color: #222;
+  }
+  
+  .hero-btn--white-bg {
+    background-color: #fff;
+    color: #000;
+    border-color: #fff;
+  }
+  
+  .hero-btn--white-bg:hover {
+    background-color: #f1f1f1;
+  }
+
   .main__inner img {
     width: 1200px;
   }
