--- a/aionbook_theme/css/coursegrid.css
+++ b/aionbook_theme/css/coursegrid.css
@@ -2,7 +2,7 @@
 /* 미래를 비추는 AI onBook */
 /*  */
 .course-grid {
-    padding: 100px 100px;
+    padding: 160px 0;
     background-color: #f0f0f0;
   }
   
@@ -15,27 +15,17 @@
   }
   
   .course-grid__container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
     width: 1200px;
     margin: 0 auto;
-    padding: 0;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    align-content: center;
   }
 
 .card {
-    flex: 0 0 360px;
     width: 384px;
-    height: 420px;
-    margin: 0 20px;
+    height: 482px;
     background-color: white;
     border-radius: 14px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
@@ -66,7 +56,7 @@
 
 .card-image {
     width: 100%;
-    height: 217px;
+    height: 100%;
     overflow: hidden;
   }
   
@@ -79,7 +69,7 @@
 
 .card h2 {
     text-align: center;
-    margin-top: 50px;
+    margin-top: 28px;
     font-size: 24px;
     line-height: 1.2;
     font-weight: 800;
@@ -109,9 +99,9 @@
     border: 1px solid #4D46D5;
     transition: all 0.3s ease;
     text-align: center;
-    margin-top: auto;
+    margin-top: 60px;
     font-weight: 600;
-    margin-bottom: 14px;
+    margin-bottom: 50px;
 }
 
 .card .button:hover {
