--- a/aionbook_theme/css/mainlogin.css
+++ b/aionbook_theme/css/mainlogin.css
@@ -1,6 +1,5 @@
-body {
-    font-family: 'Pretendard', sans-serif;
-  }
+body { font-family: 'NanumSquareRound';
+}
   
   .mainlogin {
     display: flex;
@@ -10,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f5f5f5;
+    background-color: #fff;
     margin: 0;
   }
   
