--- a/aionbook_theme/css/mainsignup1.css
+++ b/aionbook_theme/css/mainsignup1.css
@@ -28,6 +28,12 @@ body { font-family: 'NanumSquareRound';
 }
 
 .step-indicator {
+    font-family: 'Pretendard';
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 37px;
+    letter-spacing: -0.03em;
+    text-align: left;    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -37,8 +43,8 @@ body { font-family: 'NanumSquareRound';
 
 .mainsignup1_title_number {
     background-color: #f0f0f0;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -54,6 +60,12 @@ body { font-family: 'NanumSquareRound';
 }
 
 .mainsignup1_text1 {
+    font-family: 'Pretendard';
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 37px;
+    letter-spacing: -0.03em;
+    text-align: left;
     margin-top: 30px;
     margin-bottom: 30px;
     display: flex;
