--- a/aionbook_theme/css/mainsignup1.css
+++ b/aionbook_theme/css/mainsignup1.css
@@ -61,15 +61,14 @@ body { font-family: 'NanumSquareRound';
 
 .mainsignup1_text1 {
     font-family: 'Pretendard';
-    font-size: 30px;
-    font-weight: 700;
+    font-size: 20px;
+    font-weight: 600;
     line-height: 37px;
     letter-spacing: -0.03em;
-    text-align: left;
-    margin-top: 30px;
-    margin-bottom: 30px;
     display: flex;
-    font-size: 18px;
+    align-items: center;
+    gap: 10px;
+    margin: 20px 0;
 }
 
 .mainsignup1_text1 label {
@@ -124,8 +123,8 @@ body { font-family: 'NanumSquareRound';
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: background-color 0.3s ease;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .check-button.checked {
@@ -136,4 +135,20 @@ body { font-family: 'NanumSquareRound';
     content: '✓';
     color: white;
     font-size: 16px;
+}
+
+.mainsignup1_btn {
+    width: 100%;
+    height: 64px;
+    background-color: #CCCCCC;
+    color: white;
+    font-size: 20px;
+    border: none;
+    border-radius: 23px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.mainsignup1_btn.active {
+    background-color: #5069FF;
 }
