--- a/aionbook_theme/css/mainsignup1.css
+++ b/aionbook_theme/css/mainsignup1.css
@@ -49,7 +49,7 @@ body { font-family: 'NanumSquareRound';
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    font-size: 20px; /* 숫자 크기 조정 */
+    font-size: 20px; 
     font-weight: 700;
     color: #333;
 }
@@ -69,6 +69,10 @@ body { font-family: 'NanumSquareRound';
     align-items: center;
     gap: 10px;
     margin: 20px 0;
+}
+
+.mainsignup1_title_text.active {
+    color: #5069FF;
 }
 
 .mainsignup1_text1 label {
