--- a/aionbook_theme/css/mainlogin.css
+++ b/aionbook_theme/css/mainlogin.css
@@ -5,7 +5,6 @@ body { font-family: 'NanumSquareRound';
     display: flex;
     flex-direction: column;
     align-items: center;
-    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -77,3 +76,28 @@ body { font-family: 'NanumSquareRound';
     margin-left: 5px;
   }
   
+  @media screen and (max-width: 767px) {
+    .mainlogin {
+      width: 100%;
+    }
+    
+    .mainlogin_1 {
+      width: 100%;
+    }
+    
+    .mainlogin_title {
+      font-size: 32px;
+      font-weight: 700;
+      margin-bottom: 20px;
+    }
+    .mainlogin_group {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      font-size: 14px;
+    }
+    .sub_options a {
+      font-size: 14px;
+      margin-left: 0;
+    }
+  }
