--- a/aionbook_theme/css/mainsignup1.css
+++ b/aionbook_theme/css/mainsignup1.css
@@ -97,9 +97,21 @@ body { font-family: 'NanumSquareRound';
 }
 
 .term-content {
-    font-size: 14px;
-    line-height: 1.5;
+
+}
+
+.term-content-text{
+    font-family: 'Pretendard';
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 27px;
+    letter-spacing: -0.03em;
+    text-align: left;
     color: #333;
+    margin-top: 15px;
+    margin-right: 30px;
+    margin-left: 30px;
+    /* line-height: 1.5; */ 
 }
 
 .mainsignup1_btn {
@@ -155,4 +167,10 @@ body { font-family: 'NanumSquareRound';
 
 .mainsignup1_btn.active {
     background-color: #5069FF;
+}
+
+@media screen and (max-width: 767px) {
+    .mainsignup1_inner{
+        width: 100%;
+    }
 }
