반응형 입력필드 수정

--- a/aionbook_theme/css/mainsignup1.css
+++ b/aionbook_theme/css/mainsignup1.css
@@ -96,9 +96,9 @@ body { font-family: 'NanumSquareRound';
     background-color: #fafafa;
 }
 
-.term-content {
+/* .term-content {
 
-}
+} */
 
 .term-content-text{
     font-family: 'Pretendard';
